# Meituan_Hackthon

./: .gitignore  README.md  app.py  local_test.py  pyproject.toml  requirements_optional.txt  run_autonomous_patch.bat  run_baseline_compare.bat  run_final_day_train.bat  run_local_test.bat  run_one_key_train.bat  run_score_feedback_demo.bat  setup_deepseek_env.example.ps1  setup_deepseek_env.example.sh  setup_qwen_env.example.ps1  setup_qwen_env.example.sh  start.bat  start_windows.ps1  技术说明文档.md
autosolver_core/: .env.example  .gitignore  README.md  README_AUTONOMOUS_AGENT.md  README_SELF_EVOLUTION.md  analyzer.py  autosolver_agent.py  benchmark.py  core_solver.py  evaluate.py  generartor.py  long_train.py  main.py  operators.py  patch_solver.py  patch_v2.py  pyproject.toml  run_agent_distillation_2h.ps1  self_evolution.py  solver.py  solver_agent_wrapper.py  training_summary.json
autosolver_core/agent/: __init__.py  auto_strategy_injector.py  competition.py  evaluator.py  failure_analyzer.py  feature_extractor.py  graph.py  llm_analyzer.py  llm_client.py  memory.py  meta_controller.py  model.py  reward.py  state.py  strategy_registry.py  tools.py
autosolver_core/common/: __init__.py  evaluator.py  parser.py
autosolver_core/models/: agent_solver_outputs.jsonl  agent_solver_outputs_smoke.jsonl  distillation_2h_status.json  strategy_selector.json  strategy_selector_smoke.json
autosolver_core/project2.0/: AutoResearch_Agent_Report.md
autosolver_core/solver_archive/: solver_best_p0_optimized.py  solver_large_seq_low_seq_candidate.py  solver_low_scarce_candidate.py  (+6 more)
(+1664 files in other folders)
