[project]
name = "project2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipython>=9.13.0",
    "langchain>=1.3.0",
    "langchain-deepseek>=1.0.1",
    "langgraph>=1.2.0",
    "openai>=1.0.0",
]
